<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.sunshine.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:showAsAction="never"/>
    
    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_view_location"
        android:title="@string/action_view_location"
        android:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_color_activity"
        android:title="@string/action_color_activity"
        android:showAsAction="ifRoom"/>
</menu>
