<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
	android:background="#ff000000"
    android:id="@+id/createController">
    
    <EditText
        android:id="@+id/createControllerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Name"
        android:inputType="text" />

    <EditText
        android:id="@+id/createControllerIp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter IP Address"
        android:inputType="text" />

    <Button
        android:id="@+id/createControllerColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createControllerColor"/>
    <Button 
        android:id="@+id/createControllerSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createControllerSubmit"/>"
    
    <Button
        android:id="@+id/createControllerClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createControllerClose"/>
</LinearLayout>
